manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: learnk8s
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: learnk8s
spec:
  rules:
  - host: learnk8s.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: learnk8s
          servicePort: 80
        path: /
